# mrecordlog

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE-3rdparty.csv  Makefile  README.md  TODO
.github/: dependabot.yml
.github/workflows/: test.yml
benches/: bench.rs
mrecordlog_cli/: Cargo.toml
mrecordlog_cli/src/: main.rs
src/: block_read_write.rs  debug_stuck.rs  error.rs  lib.rs  main.rs  mockfile.rs  multi_record_log.rs  persist_policy.rs  proptests.rs  record.rs  tests.rs
src/frame/: header.rs  mod.rs  reader.rs  tests.rs  writer.rs
src/mem/: arena.rs  circular.rs  mod.rs  queue.rs  queues.rs  rolling_buffer.rs  summary.rs  tests.rs
src/page_directory/: header.rs  mod.rs  page_list.rs  page_refcounts.rs  reader.rs  readme.txt  writer.rs
src/recordlog/: mod.rs  reader.rs  tests.rs  writer.rs
src/rolling/: directory.rs  file_number.rs  file_tracker.rs  mod.rs  tests.rs
