workspace = { members = ["mrecordlog_cli"] }
[package]
name = "mrecordlog"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Quickwit's shared record log."
rust-version = "1.68"                         # 1.67 contains an UB we would trigger

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
crc32fast = "1.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1.37"

[dev-dependencies]
criterion = "0.5"
futures = "0.3"
proptest = "1"
rand = "0.9"
tempfile = "3"

[[bench]]
name = "bench"
harness = false
